--- a/HealthBrick/XMLData.qrc
+++ b/HealthBrick/XMLData.qrc
@@ -2,4 +2,7 @@
     <qresource prefix="/XML">
         <file>demo.xml</file>
     </qresource>
+    <qresource prefix="/icons">
+        <file>icon/番茄.svg</file>
+    </qresource>
 </RCC>
