--- a/HealthBrick/mainwindow.ui
+++ b/HealthBrick/mainwindow.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="XMLData.qrc">
+    <normaloff>:/icons/icon/番茄.svg</normaloff>:/icons/icon/番茄.svg</iconset>
+  </property>
   <widget class="QWidget" name="centralwidget"/>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -59,6 +63,8 @@
    </property>
   </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="XMLData.qrc"/>
+ </resources>
  <connections/>
 </ui>
